Fix slider-thumb alignment

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -279,7 +279,7 @@ body {
   position: relative;
 
   background: no-repeat url(../img/sprites.png) -725px 0;
-  background-size: 737px 53px;
+  background-size: 742px 53px;
 }
 
 #time-and-slider {
